# happyserial

./: .gitignore  README.md
src_c/: heppyserial.emProject
src_c/examples/: examples.emProject  exampls.emProject  happyserial_test.emProject  happyserial_test.emSession
src_c/examples/common/echo/: echo.c
src_c/examples/nRF52840-DK/: examples.emProject  happyserial.emProject
src_c/examples/nRF5340-DK/: happyserial.emProject  nRF5340_xxAA_Application_MemoryMap.xml  nRF_Flash_Variant2.icf
src_c/examples/nRF5340-DK/nRF/Source/: nrf5340_application_Vectors.s
src_c/happyserial/: crc.c  crc.h  happyserial.c  happyserial.h  happyversion.h  hdlc.c  hdlc.h
src_c/ports/: uart.h
src_c/ports/nRF52840/: uart.c
src_c/ports/nRF5430_app/: uart.c
src_python/: README.md  pyproject.toml  setup.cfg
src_python/examples/: PeriodicSerial.py  README.md
src_python/src/happyserial/: BreakfastSerial.py  Crc.py  HappySerial.py  HappyVersion.py  Hdlc.py  __init__.py
src_python/tests/: test_dummy.py  test_echo.py  test_import.py  test_version.py
