[metadata]
name                              = happyserial
version                           = attr: happyserial.HappyVersion.HAPPYVERSION
author                            = Thomas Watteyne
author_email                      = twatteyne@gmail.com
description                       = DMA-based framing for serial interaction with an nRF chip
long_description                  = file: README.md
long_description_content_type     = text/markdown
project_urls                      =
    Source Code                   = https://github.com/openwsn-berkeley/happyserial/
    Bug Tracker                   = https://github.com/openwsn-berkeley/happyserial/issues
classifiers                       =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
install_requires                  =
    pyserial

[options.packages.find]
where=src